apps/frontend/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: frontend
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "frontend.basilaslam.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
